Fix match container top margin on mobile

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -696,7 +696,7 @@ table tr td {
   }
 
   .matchContainer {
-    margin-top: 50px;
+    margin-top: 70px;
     padding-left: 0px;
     padding-right: 0px;
   }
